// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component should apply values from theme 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
  updateTheme={[Function]}
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#43484d",
            "fontSize": 17.5,
            "fontWeight": "bold",
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
        testID="cardTitle"
        theme={
          Object {
            "Card": Object {
              "title": "Yea b",
            },
            "colors": Object {
              "disabled": "hsl(208, 8%, 90%)",
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "platform": Object {
                "android": Object {
                  "error": "#f44336",
                  "primary": "#2196f3",
                  "secondary": "#9C27B0",
                  "success": "#4caf50",
                  "warning": "#ffeb3b",
                },
                "ios": Object {
                  "error": "#ff3b30",
                  "primary": "#007aff",
                  "secondary": "#5856d6",
                  "success": "#4cd964",
                  "warning": "#ffcc00",
                },
              },
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#8F0CE8",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          }
        }
        updateTheme={[Function]}
      >
        Yea b
      </Text>
      <View
        style={
          Object {
            "backgroundColor": "#bcbbc1",
            "height": 0.5,
            "marginBottom": 15,
          }
        }
        updateTheme={[Function]}
      />
    </View>
  </View>
</View>
`;

exports[`Card Component should have Card title with image 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "red",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 0,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Component>
      <Themed.Text
        style={
          Object {
            "backgroundColor": "red",
            "color": "#43484d",
            "fontSize": 17.5,
            "fontWeight": "bold",
            "marginBottom": 15,
            "marginTop": 15,
            "textAlign": "center",
          }
        }
        testID="cardTitle"
      >
        HELLO WORLD
      </Themed.Text>
    </Component>
    <Component>
      <ImageBackground
        source={
          Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
        }
        style={
          Array [
            Object {
              "height": 150,
              "width": null,
            },
            undefined,
          ]
        }
      />
      <Component
        style={
          Object {
            "padding": 10,
          }
        }
      />
    </Component>
  </Component>
</Component>
`;

exports[`Card Component should have Card title without image 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "red",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Component>
      <Themed.Text
        style={
          Object {
            "color": "#43484d",
            "fontSize": 17.5,
            "fontWeight": "bold",
            "marginBottom": 15,
            "textAlign": "center",
          }
        }
        testID="cardTitle"
      >
        Card Title
      </Themed.Text>
      <Themed.Divider
        style={
          Object {
            "backgroundColor": "red",
            "marginBottom": 15,
          }
        }
      />
    </Component>
  </Component>
</Component>
`;

exports[`Card Component should have Card with featured title 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 0,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    <Component>
      <Themed.Text
        style={
          Object {
            "color": "#43484d",
            "fontSize": 17.5,
            "fontWeight": "bold",
            "marginBottom": 15,
            "marginTop": 15,
            "textAlign": "center",
          }
        }
        testID="cardTitle"
      >
        foo title
      </Themed.Text>
    </Component>
    <Component
      style={
        Object {
          "backgroundColor": "red",
        }
      }
    >
      <ImageBackground
        source={
          Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
        }
        style={
          Array [
            Object {
              "height": 150,
              "width": null,
            },
            Object {
              "backgroundColor": "red",
            },
          ]
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "rgba(0, 0, 0, 0.2)",
              "bottom": 0,
              "flex": 1,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Themed.Text
            style={
              Object {
                "backgroundColor": "red",
                "color": "white",
                "fontSize": 22.5,
                "fontWeight": "800",
                "marginBottom": 8,
              }
            }
          >
            featured title
          </Themed.Text>
          <Themed.Text
            style={
              Object {
                "backgroundColor": "red",
                "color": "white",
                "fontSize": 16.25,
                "fontWeight": "400",
                "marginBottom": 8,
              }
            }
          >
            featured sub title
          </Themed.Text>
        </Component>
      </ImageBackground>
      <Component
        style={
          Object {
            "backgroundColor": "red",
            "padding": 10,
          }
        }
      />
    </Component>
  </Component>
</Component>
`;

exports[`Card Component should have custom component as title 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
    />
  </Component>
</Component>
`;

exports[`Card Component should render without issues 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "white",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 0,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  />
</Component>
`;
